<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/login"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/white"
        android:background="@null"
        android:drawableLeft="@mipmap/phone_login"
        android:drawablePadding="10dp"
        android:hint="@string/login_edt_user_name"
        android:inputType="phone"
        android:paddingBottom="5dp"
        android:textColorHint="@android:color/darker_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:drawableLeft="@mipmap/suo_login"
        android:drawablePadding="10dp"
        android:hint="@string/login_edt_user_password"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:textColorHint="@android:color/darker_gray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login"
        android:text="@string/login_btn_login"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_tv_reset"
            android:textColor="@color/text_gray" />

        <LinearLayout
            android:id="@+id/linear_regist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_tv_regist"
                android:textColor="@color/text_gray" />

            <ImageView
                android:id="@+id/iv_regist"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/zc" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2.0px"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/login_tv_other"
            android:textColor="@android:color/white" />


        <View
            android:layout_width="0dp"
            android:layout_height="2.0px"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">



        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/weixin"
            android:text="@string/login_tv_wx"
            android:textColor="@color/text_gray" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/weibo"
            android:drawablePadding="6dp"
            android:textSize="14sp"
            android:text="@string/login_tv_xl"
            android:textColor="@color/text_gray" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/qq"
            android:text="@string/login_tv_qq"
            android:drawablePadding="6dp"
            android:textSize="14sp"
            android:textColor="@color/text_gray" />
    </LinearLayout>
</LinearLayout>