<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/tab"
    android:layout_height="50dp"
    android:background="@color/write"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layout_home"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@mipmap/homeing" />

        <TextView
            android:layout_gravity="center"
            android:drawablePadding="5dp"
            android:id="@+id/tv_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/color_red"
            android:gravity="top|center_horizontal"
            android:text="@string/main_home"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_shop"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_shop"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@mipmap/shop" />

        <TextView
            android:id="@+id/tv_shop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/more_bg"
            android:gravity="top|center_horizontal"
            android:text="@string/main_shop"
            android:textSize="12sp" />
    </LinearLayout>



    <View
        android:layout_width="100dp"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:id="@+id/layout_cf"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_cf"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@mipmap/quanzi" />

        <TextView
            android:id="@+id/tv_cf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/more_bg"
            android:gravity="top|center_horizontal"
            android:text="@string/main_cf"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_me"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_me"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@mipmap/wode" />

        <TextView
            android:id="@+id/tv_me"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/more_bg"
            android:gravity="top|center_horizontal"
            android:text="@string/main_myinfo"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>